# fixed-length-fingerprint-extractors

./: .gitignore  AIRGAP_INSTALLATION.md  LARGE_SCALE_TRAINING_GUIDE.md  OPTIMIZATION_SUMMARY.md  TRAINING_PIPELINE_GUIDE.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
docs/: MULTI_FINGER_SLAP_PROCESSING.md
flx/data/: __init__.py  dataset.py  fingerflow_minutia_loader.py  image_loader.py  minutia_map_loader.py  slap_loader.py
flx/extractor/: fixed_length_extractor.py
flx/fusion/: __init__.py  multi_finger_fusion.py
flx/image_processing/: __init__.py  slap_segmentation.py
flx/models/: __init__.py  deep_print_loss.py  model_training.py  slap_localization.py  torch_helpers.py
flx/visualization/: plot_minutiae.py
notebooks/: dataset_tutorial.ipynb  embedding_generation_tutorial.ipynb  model_training_tutorial.ipynb
scripts/: extract_minutiae.py  train_500k.py
tests/: test_datasets.py
